Draft task 5 (report; DIT348)

--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -106,3 +106,11 @@
   year={2009}
 }
 
+@article{Caldiera1994,
+  title={The goal question metric approach},
+  author={Caldiera, Victor R Basili1 Gianluigi and Rombach, H Dieter},
+  journal={Encyclopedia of software engineering},
+  pages={528--532},
+  year={1994}
+}
+
