--- a/report_template_dit348.tex
+++ b/report_template_dit348.tex
@@ -350,16 +350,6 @@ between the improvement issues in a sensible manner.
 % proposal based on what you wrote in Section~\ref{sec:experiences}. Second,
 % define questions and metrics you connect to those goals.
 
-
-% TODO: examine the structure and the formatting of this section.
-
-% A measurement plan contains:
-% - Which information is collected?
-% - What is the unit of measurement?
-% - What is the source of the data?
-% - By whom is the information collected?
-% - Where is the information stored?
-
 In this section, the {\fontfamily{qhv}\selectfont GQM} tool is utilized as part
 of the SPI proposal. Basili, Caldiera, and Rombach \cite{Caldiera1994} define
 CQM as an approach which underscores the importance of organizations defining
@@ -369,11 +359,9 @@ their progress towards the goals. It was originally defined to evaluate defects
 in a set of NASA projects \cite{Caldiera1994}, though, over the years, it has
 been tailored to be applicable to a broader spectrum of projects.
 
-Herein, a goal is written in the following manner: \textit{X)}, where
-\textit{X} is an ordinal. A question follows the notation
-\textbf{Q\textit{X.Y}}, where \textit{Y} is the question's ordinal. Similarly,
-a metric follows a similar notation, notably, \textbf{M\textit{X.Z}}, where
-\textit{Z} is the metric's ordinal. A metric, in this context, provides a
+Before proceeding with the SPI, let us define some notation. A goal is written
+as \textit{x}). A question follows the notion Q\textit{x.y} Similarly, a metric
+follows the notion M\textit{x.z}. A metric, in our context, provides a
 measurement plan with a general idea of how the data is to be collected and
 analyzed. In some cases, there's an example provided for the ease of
 understanding.
@@ -413,12 +401,12 @@ With that in mind, 1) is accompanied with the following questions and metrics:
     $\frac{n_d}{n} \times 100$ (\%), where $n_d$ is the number of tasks that
     followed the DoD principles when delivered to the PO, and $n$ is the number
     of all tasks expected to be worked on within a set time frame (such as a
-    sprint). In the context of a Lego Scrum workshop, it is difficult to keep
+    sprint). In the context of the Lego Scrum workshop, it is difficult to keep
     track of how many times the DoD was applied, since the team members may
     report inaccurate data. However, in the context of a real-world software
     project, this metric can be easily obtained by observing whether the DoD
-    was appended to a merge request (or a pull request) that was merged into
-    the main branch of the project's repository. Nevertheless, for our case, we
+    was appended to a, say, merge request (or a pull request) that was merged into
+    the \textit{main} branch of the project's repository. Nevertheless, for our case, we
     assume that the team members are honest and report accurate data.
     Subsequently, the aforementioned formula is applied and team members are
     made aware of the results. The calculations are to be stored (and
@@ -433,68 +421,128 @@ With that in mind, 1) is accompanied with the following questions and metrics:
 
 Secondly, 2) is accompanied with the following questions and metrics:
 
-% TODO: check the wording
 \begin{itemize}
   \item \textbf{Q2.1}: How accurately do the assigned user story points align
     with the actual time invested?
   \item \textbf{M2.1}:
     Decide how many minutes one story point represents (this is to be decided
-    at the beginning of a sprint by all team members). For this example,
-    let's say that one story point represents 5 minutes. A randomly chosen team
-    member determines the total number of story points completed in a sprint, say
-    $s$, and then collects the data from the team members regarding the time
-    spent working on the user stories [in minutes], say $t$. The team members
-    would be previously instructed on how to track the time spent working during a
-    sprint with the help of an appropriate tool such as Toggl (or any other
-    tool that is deemed suitable). The chosen team member would then perform a
-    simple calculation on their local machine in the following way:
-    $\frac{s}{t}$. In this case, the ideal ratio is $\approx \frac{1}{5}$. A
-    threshold interval can be defined as $[\frac{1}{5} - \epsilon, \frac{1}{5}
-    + \epsilon]$, where $\epsilon$ is some small number, say $0.1$. If the
-    ratio falls within the threshold interval, then the story points are
-    considered to be accurate -- this ratio can be altered to fit the team's
-    needs and can be derived from the team's experience in the previous sprints
-    and/or projects. The results, for a future reference, can be stored in a
-    primary communication channel (e.g., Slack, Discord, etc.).
+    at the beginning of a sprint by all team members). For this example, let's
+    say that one story point represents 5 minutes. Then, once the sprint has
+    elapsed, a randomly chosen team member collects the total number of story
+    points completed during the sprint, say $s$, and afterwards collects the
+    total time that the team members have spent working on the user stories [in
+    minutes], say $t$. The team members would be previously instructed on how
+    to track time spent working during a sprint with the help of an appropriate
+    tool such as \textit{Toggl} (or any other tool that is deemed suitable).
+    The chosen team member would then perform a simple calculation on their
+    local machine in the following way: $\frac{s}{t}$. In this case, the ideal
+    ratio is $\approx \frac{1}{5}$. A threshold interval can be defined as
+    $[\frac{1}{5} - \epsilon, \frac{1}{5} + \epsilon]$, where $\epsilon$ is
+    some small number, say $0.1$. If the ratio falls within the threshold
+    interval, then the story points are considered to be an accurate
+    representation of the time invested. The ratio can be altered to fit the
+    team's needs, and [the ratio] can be derived from the team's experience in
+    the previous sprints and/or projects. The results, for a future reference,
+    can be stored in a communication channel (such Slack, Discord, and so
+    forth).
   \item \textbf{Q2.2}: How can story points enhance the workload distribution
     among team members?
   \item \textbf{M2.2}: 
     Establish how many story points a team member is expected to complete
     during a sprint (this value is decided by the team members at the beginning
     of a sprint), namely $m$. Assume that team members should work on an equal
-    basis, i.e., they should complete the same number of story points. Measure
-    the number of story points that each team member completes during a sprint,
-    and assign them to variables $x_1, x_2, \dots, x_n$, where $n$ is the size
-    of the team (it would be the responsibility of each team members to keep
-    track of and report the number of story points they completed). At the end
-    of the sprint, a randomly chosen team member collects all data entries and
-    performs a calculation on their local machine in the following manner:
-    $\beta = \sum_{i=1}^{n} |x_i - m|$. Herein, $\beta$ is an arbitrary value
-    that represents the workload distribution among the team members. The
-    closer $\beta$ is to $0$, the more evenly distributed the workload is. In
-    that essense, similarly to the previous metric, a threshold interval can be
-    defined, and an appropriate $\epsilon$ can be chosen (this is to be
-    determined by the team members).
+    basis, i.e., they should complete the same number of story points in a
+    given time frame (in our case, a sprint). Keep track of the number of story
+    points that each team member completes during a sprint, and, once the
+    sprint is over, assign them to variables $x_1, x_2, \dots, x_n$, where $n$
+    is the size of the team. Furthermore, it is the responsibility of each team
+    member to keep track of their own story points---how they do it is up to
+    them. At the end of the sprint, a randomly chosen team member collects all
+    data entries and performs a calculation on their local machine in the
+    following manner: $\beta = \sum_{i=1}^{n} |x_i - m|$. Herein, $\beta$ is an
+    arbitrary value that represents the workload distribution among the team
+    members. The closer $\beta$ is to $0$, the more evenly distributed the
+    workload is. In that essence, similarly to the previous metric, a threshold
+    interval can be defined, and an appropriate $\epsilon$ can be chosen (this
+    is to be determined by the team members based on their experience and
+    intuition).
 \end{itemize}
 
 Lastly, 3) is accompanied with the following questions and metrics:
 
-% TODO: check the wording; apply all principles to construct a measurement plan.
 \begin{itemize}
   \item \textbf{Q3.1}: How effective are the cross-team communication efforts?
-  \item \textbf{M2.1}: An averaged satisfaction score that is obtained from
-    the team members and all other parties involved in any cross-team meetings.
-    A traditional Likert scale from $1 \to 5$ can be used to obtain the scores,
-    where $1$ corresponds to \textit{"Strongly dissatisfied"} and $5$ corresponds
-    to \textit{"Strongly satisfied"}. Ideally, the team should strive to obtain
-    a score of $\approx 5$.
-  \item \textbf{Q2.2}: How well do contributions from all teams function together?
-  \item \textbf{M2.2}: The number of integration problems occurring during the
-    project (or during a sprint, if a more granular approach is desired).
+  \item \textbf{M3.1}: An averaged satisfaction score that is obtained from the
+    team members and all other parties involved in any cross-team meetings. A
+    traditional Likert scale from $1 \to 5$ can be used to obtain the score,
+    where $1$ corresponds to \textit{"Strongly dissatisfied"} and $5$
+    corresponds to \textit{"Strongly satisfied"}. Ideally, the team should
+    strive to obtain a score of $\approx 5$. A team member who has volunteered
+    (or has been randomly selected, if no one volunteers) will be responsible
+    to notify all people involved in the meeting about the survey (typically,
+    once the meeting has ended) and provide them with the appropriate link. The
+    survey itself shall not take more than 1 minute so that the participants do
+    fill it in. The survey can be constructed with the help of, for instance,
+    Google Forms, and the results can be stored in a Google Sheets document.
+    Therein, the team members can observe the results which are updated in
+    real-time and calculated automatically, and, if necessary, take appropriate
+    actions. The sheet can be re-used for future meetings too.
+  \item \textbf{Q3.2}: How well do contributions from all teams function together?
+  \item \textbf{M3.2}: The number of integration problems occurring during the
+    project (or during a sprint, if a more granular approach is desired) is to
+    be counted. The data is to be obtained from the team members and the PO(s)
+    by a volunteer (or a randomly selected team member, if no one volunteers from
+    the team). The data is to be stored in a Google Sheets document or a simple
+    Markdown/text file (which is distributed to all team members). The data
+    is updated continuously, meaning that, if required, the team members can
+    take appropriate actions in a timely manner.
 \end{itemize}
 
-% TODO: to define at least two concrete improvement steps per goal; USE A4!
-% Careful to reference the corresponding literature when you - use literature.
+In terms of 1), items in the DoD are to be continuously reviewed and updated
+based on the team's needs. Observations from the matrics M1.1 and M1.2 are to
+act as a guideline for the team members to identify the shortcomings of the
+DoD. For instance, if the team members are not able to unable to grasp the
+items of the DoD, then they are to be rephrased in a more understandable
+manner. On the other hand, if the team members consistently fail to apply the
+DoD to their work, then, perhaps some of the items of the current DoD may be
+cumbersome to follow, and, as a result, the DoD is subject to be revised.
+Additionally, The Kanban board would be extended with a new column titled
+\textit{QA} (which stands for \textit{Quality Assurance}). The column would
+hold user stories that are subject to be reviewed based on the principles of
+the team's DoD. Afterwards, if all items of the DoD are satisfied, the user
+story is moved to the \textit{Done} column. Otherwise, the user story is moved
+back to the \textit{To Do} column. So, the updated flow would be as follows:
+
+$$\textit{To Do} \to \textit{In Progress} \leftrightarrow \textit{QA} \to
+\textit{Done}$$
+
+% TODO: revisit if these are actually feasible.
+
+Regarding 2), using the metric of 2.1, team members obtain a clear indication
+of how accurate their estimations are. As a result, they would be encouraged to
+investigate the reasons behind the deviations from the ideal ratio, and, in
+turn, practice their estimation capabilities. Doing so would not only enhance
+the team's overall performance, but also, inherently, mature the process.
+What's more, the metric 2.2 would help to uncover any workload discrepancies
+among the team. Concretely, the two extrema (i.e., the minimum and the maximum)
+would be taken from the set of values $x_1, x_2, \dots, x_n$, and the team
+members would be encouraged to discuss the reasons behind the discrepancies.
+For the upcoming sprint, the team member who underperformed would be assigned a
+smaller number of story points, and, vice versa, the team member who
+overperformed would be assigned a larger number of story points (the alteration
+of the number of story points is to be decided by the team members, though, in
+case of a disagreement, $20\%$ of the number of story points is to be added or
+subtracted).
+
+To address 3), firstly, we intend to propose that all teams schedule several
+meetings throughout the workshop (e.g., once an hour) to discuss any
+integration problems that might arise or have been encountered. Secondly, we
+would have a designated role whose responsibility is to oversee any integration
+concerns and communicate with the other teams. The role would be assigned in a
+round-robin fashion (this way, each team member would have a chance to take on
+the role). Moreover, the person given this role would be leading the meetings
+[discussed in previous improvement step] and would utilize the metrics and
+measurement plans, notably M3.1 and M3.2.
 
 \section{Implementation of an SPI Initiative}
 \label{sec:implementation}
