Add note to myself (report; DIT348)

--- a/report_template_dit348.tex
+++ b/report_template_dit348.tex
@@ -517,6 +517,9 @@ $$\textit{To Do} \to \textit{In Progress} \leftrightarrow \textit{QA} \to
 \textit{Done}$$
 
 % TODO: revisit if these are actually feasible.
+% TODO: see if the paper `Niazi et al. - Software Process Improvement barriers
+% A cross-cultural comparison.pdf` from Canvas is good to be used in any of these
+% points.
 
 Regarding 2), using the metric of 2.1, team members obtain a clear indication
 of how accurate their estimations are. As a result, they would be encouraged to
