Add more resources to the report (DIT348)

--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -33,6 +33,13 @@
 
 % ===== Included from the template =====
 
+@book{Munch2012,
+  title={Software process definition and management},
+  author={M{\"u}nch, J{\"u}rgen and Armbrust, Ove and Kowalczyk, Martin and Sot{\'o}, Martin},
+  year={2012},
+  publisher={Springer}
+}
+
 @book{Humphrey1989,
   title={Managing the software process},
   author={Humphrey, Watts S},
