--- a/report_template_dit348.tex
+++ b/report_template_dit348.tex
@@ -91,8 +91,9 @@ TODO
 % Software Process Improvement (SPI) in general and to introduce the purpose
 % and context of this report.
 
-A software process refers to the set of tools, methods, and practices used to
-produce a software product \cite{Humphrey1989}.
+A software process is a goal-oriented approach which incorporates a set of
+tools, methods, and practices to produce a software product or a more general
+software service \cite{Munch2012}, \cite{Humphrey1989}.
 With the increasing complexity of software systems, the need for a well-defined
 software process has become more and more significant.
 With that in mind, Basili and Rombach \cite{Basili1988} state that the software
@@ -141,8 +142,12 @@ middle of the scale, and thereby non-linear scales yield more accurate results.
 
 Furthermore, a \textbf{Kanban board} is to be used throughout the workshop to
 categorize each user story into one of the following columns: (i) \textit{To
-Do}, (ii) \textit{In Progress}, (iii) \textit{Done}. The process does not
-assume any type of a board; either a physical or a digital board can be used.
+Do}, (ii) \textit{In Progress}, (iii) \textit{Done}. The reason why a Kanban
+board was considered can be supported by a claim made by Ahmad et al.
+\cite{Ahmad2014} suggesting that a Kanban board provides visibility to the
+[software] development process, communicates priorities and highlights
+bottlenecks. The process does not assume any type of a board; either a physical
+or a digital board can be used.
 
 What's more, a sprint is to last an hour and at the end of each sprint, a
 meeting takes place which is, put simply, a conjunction of a sprint review and
@@ -249,9 +254,12 @@ integration risks is unavoidable, and should not be disregarded in a
 high-quality process. Cater-Steel et al. \cite{CaterSteel2006} further
 emphasize the importance of cross-team communication by stating, quote,
 \textit{"[...] high quality external expertise is [even] more critical than top
-management support"}. It is thereby evident that the lack of cross-team
-communication poses a serious threat that should be addressed in the future
-stages of the maturity of the process.
+management support"}. Ultimately, a study conducted by Niazi et al. concludes
+that the lack of communication is one of the common SPI barriers that are
+encountered in practice \cite{Niazi2010}.
+It is thereby evident that the lack of cross-team communication poses a serious
+threat that should be addressed in the future stages of the maturity of the
+process.
 
 \begin{figure*}
 	\centering
@@ -517,9 +525,6 @@ $$\textit{To Do} \to \textit{In Progress} \leftrightarrow \textit{QA} \to
 \textit{Done}$$
 
 % TODO: revisit if these are actually feasible.
-% TODO: see if the paper `Niazi et al. - Software Process Improvement barriers
-% A cross-cultural comparison.pdf` from Canvas is good to be used in any of these
-% points.
 
 Regarding 2), using the metric of 2.1, team members obtain a clear indication
 of how accurate their estimations are. As a result, they would be encouraged to
