Add task 7, draft 6, add diagram (report; DIT348)
TODO: abstract, task 6, task 8 (bonus), conclusion.
ETA: 8h

--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -121,3 +121,21 @@
   year={1994}
 }
 
+@inproceedings{Ahmad2014,
+  title={Usage of kanban in software companies},
+  author={Ahmad, Muhammad Ovais and Markkula, Jouni and Oivo, Markku and Kuvaja, Pasi},
+  booktitle={9th International Conference on Software Engineering Advances},
+  year={2014}
+}
+
+@article{Niazi2010,
+  title={Software Process Improvement barriers: A cross-cultural comparison},
+  author={Niazi, Mahmood and Babar, Muhammad Ali and Verner, June M},
+  journal={Information and software technology},
+  volume={52},
+  number={11},
+  pages={1204--1216},
+  year={2010},
+  publisher={Elsevier}
+}
+
