Add reference to SCRUM guide (report;DIT348)

--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -33,6 +33,12 @@
 
 % ===== Included from the template =====
 
+@article{Schwaber2020,
+  title={The Scrum Guide},
+  author={Schwaber, Ken and Sutherland, Jeff},
+  year={2020}
+}
+
 @book{Munch2012,
   title={Software process definition and management},
   author={M{\"u}nch, J{\"u}rgen and Armbrust, Ove and Kowalczyk, Martin and Sot{\'o}, Martin},
