--- a/report_template_dit348.tex
+++ b/report_template_dit348.tex
@@ -117,9 +117,10 @@ The defined process is titled {\fontfamily{qhv}\selectfont AKAMMO} and primarily
 utilizes concepts from Scrum and Incremental Delivery, and to a lesser extent,
 User Story Practice. Scrum provides a flexible and adaptive approach to project
 management, and encourages transparency in terms of the project's progress and
-the issues encountered. Scrum, by definition, is meant to be applied in an
-iterative manner, which is why a conjunction with Incremental Delivery becomes
-a natural choice \cite{Srivastava2017}, \cite{Schwaber1997}.
+the issues encountered \cite{Schwaber2020}. Scrum, by definition, is meant to
+be applied in an iterative manner, which is why a conjunction with Incremental
+Delivery becomes a natural choice \cite{Schwaber2020}, \cite{Srivastava2017},
+\cite{Schwaber1997}.
 
 Initially, the process assumes a set of user stories that are to be implemented
 (and are prioritized by the Product Owner, hereafter PO). Afterwards, the team
@@ -151,20 +152,21 @@ or a digital board can be used.
 
 What's more, a sprint is to last an hour and at the end of each sprint, a
 meeting takes place which is, put simply, a conjunction of a sprint review and
-a sprint retrospective (adapted from Scrum). Herein, the team members are to
-discuss the difficulties they encountered as well as evaluate the overall
-progress made. Consequently, this meeting results in a definition of an
-\textbf{increment} to the product that is to be delivered to the PO.
+a sprint retrospective (adapted from Scrum \cite{Schwaber2020}). Herein, the
+team members are to discuss the difficulties they encountered as well as
+evaluate the overall progress made. Consequently, this meeting results in a
+definition of an \textbf{increment} to the product that is to be delivered to
+the PO.
 
 The process, by default, does not schedule any breaks; however, there is a
 possibility of a so-called \textit{emergency break} that can be called by any
 team member at most once every 30 minutes on a team-wide basis.
 Breaks on an individual basis are allowed, but shall not interfere with the
 team's progress. In a typical Scrum environment, stand-up meetings are held
-continuously throughout a set period of time. However, in the context of the
-Lego Scrum workshop, the team members are not obliged to hold such meetings,
-since the team merely consists of six members, and the workshop itself is not
-meant to last longer than four hours.
+continuously throughout a set period of time \cite{Schwaber2020}. However, in
+the context of the Lego Scrum workshop, the team members are not obliged to
+hold such meetings, since the team merely consists of six members, and the
+workshop itself is not meant to last longer than four hours.
 
 % TODO: can add more text here if the page limit permits.
 
