Add references to the assignments (report;DIT348)

--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -145,3 +145,38 @@
   publisher={Elsevier}
 }
 
+%%% Our assignments %%%
+
+% TODO: make the titles preserve case-sensitivity!
+@inproceedings{DIT348A1,
+  title={Week 1, Assignment 1 in course DIT348 H23},
+  author={{[Undisclosed Authors]}},
+  organization={Software Engineering Program},
+  publisher={University of Gothenburg, Sweden},
+  year={2023}
+}
+
+@inproceedings{DIT348A2,
+  title={The process you used during the 1st workshop and the experiences, Assignment 2 in course DIT348 H23},
+  author={{[Undisclosed Authors]}},
+  organization={Software Engineering Program},
+  publisher={University of Gothenburg, Sweden},
+  year={2023}
+}
+
+@inproceedings{DIT348A3,
+  title={GQM, Assignment 3 in course DIT348 H23},
+  author={{[Undisclosed Authors]}},
+  organization={Software Engineering Program},
+  publisher={University of Gothenburg, Sweden},
+  year={2023}
+}
+
+@inproceedings{DIT348A4,
+  title={Software Process Improvement Plan, Assignment 4 in course DIT348 H23},
+  author={{[Undisclosed Authors]}},
+  organization={Software Engineering Program},
+  publisher={University of Gothenburg, Sweden},
+  year={2023}
+}
+
