--- a/report_template_dit348.tex
+++ b/report_template_dit348.tex
@@ -115,12 +115,12 @@ Ultimately, ... % <TODO> (one sentence; a discussion topic or something like tha
 
 The defined process is titled {\fontfamily{qhv}\selectfont AKAMMO} and primarily
 utilizes concepts from Scrum and Incremental Delivery, and to a lesser extent,
-User Story Practice. Scrum provides a flexible and adaptive approach to project
-management, and encourages transparency in terms of the project's progress and
-the issues encountered \cite{Schwaber2020}. Scrum, by definition, is meant to
-be applied in an iterative manner, which is why a conjunction with Incremental
-Delivery becomes a natural choice \cite{Schwaber2020}, \cite{Srivastava2017},
-\cite{Schwaber1997}.
+User Story Practice \cite{DIT348A1}. Scrum provides a flexible and adaptive
+approach to project management, and encourages transparency in terms of the
+project's progress and the issues encountered \cite{Schwaber2020}. Scrum, by
+definition, is meant to be applied in an iterative manner, which is why a
+conjunction with Incremental Delivery becomes a natural choice
+\cite{Schwaber2020}, \cite{Srivastava2017}, \cite{Schwaber1997}.
 
 Initially, the process assumes a set of user stories that are to be implemented
 (and are prioritized by the Product Owner, hereafter PO). Afterwards, the team
@@ -184,7 +184,8 @@ workshop itself is not meant to last longer than four hours.
 On the whole, the aforementioned process, {\fontfamily{qhv}\selectfont AKAMMO},
 seemed to be a viable choice for the first Lego Scrum Workshop. The team members
 considered the process to be flexible enough to accommodate the needs of the
-team, and, at the same time, it was not too rigid to hinder the team's progress.
+team, and, at the same time, it was not too rigid to hinder the team's progress
+\cite{DIT348A2}.
 
 The process has been followed in the manner described in the previous section
 (Section~\ref{sec:process}) with little to no deviations. Indeed, it was the
@@ -360,13 +361,15 @@ between the improvement issues in a sensible manner.
 % define questions and metrics you connect to those goals.
 
 In this section, the {\fontfamily{qhv}\selectfont GQM} tool is utilized as part
-of the SPI proposal. Basili, Caldiera, and Rombach \cite{Caldiera1994} define
-CQM as an approach which underscores the importance of organizations defining
-their \textbf{goals}, linking them to operational data, and establishing a
-framework for data interpretation in order to \textbf{measure purposefully}
-their progress towards the goals. It was originally defined to evaluate defects
-in a set of NASA projects \cite{Caldiera1994}, though, over the years, it has
-been tailored to be applicable to a broader spectrum of projects.
+of the SPI proposal, and is adapted from the assignments of the course that
+the team worked on, notably \cite{DIT348A3}, \cite{DIT348A4}. Basili, Caldiera,
+and Rombach \cite{Caldiera1994} define CQM as an approach which underscores the
+importance of organizations defining their \textbf{goals}, linking them to
+operational data, and establishing a framework for data interpretation in order
+to \textbf{measure purposefully} their progress towards the goals. It was
+originally defined to evaluate defects in a set of NASA projects
+\cite{Caldiera1994}, though, over the years, it has been tailored to be
+applicable to a broader spectrum of projects.
 
 Before proceeding with the SPI, let us define some notation. A goal is written
 as \textit{x}). A question follows the notion Q\textit{x.y} Similarly, a metric
