Scaffold tasks 6, 8 (report; DIT348)

--- a/report_template_dit348.tex
+++ b/report_template_dit348.tex
@@ -371,12 +371,12 @@ originally defined to evaluate defects in a set of NASA projects
 \cite{Caldiera1994}, though, over the years, it has been tailored to be
 applicable to a broader spectrum of projects.
 
-Before proceeding with the SPI, let us define some notation. A goal is written
-as \textit{x}). A question follows the notion Q\textit{x.y} Similarly, a metric
-follows the notion M\textit{x.z}. A metric, in our context, provides a
-measurement plan with a general idea of how the data is to be collected and
-analyzed. In some cases, there's an example provided for the ease of
-understanding.
+Before proceeding with the SPI initiative, let us define some notation. A goal
+is written as \textit{x}). A question follows the notion Q\textit{x.y}
+Similarly, a metric follows the notion M\textit{x.z}. A metric, in our context,
+provides a measurement plan with a general idea of how the data is to be
+collected and analyzed. In some cases, there's an example provided for the ease
+of understanding.
 
 Based on the observations made in Section~\ref{sec:experiences}, the following
 goals are defined for the SPI proposal:
@@ -559,11 +559,11 @@ measurement plans, notably M3.1 and M3.2.
 \label{sec:implementation}
 
 Beacause of an illness, I was unable to attend the second Lego Scrum workshop,
-so the alternative task is to be completed instead in this section instead.
+so the alternative task is to be completed in this section instead.
 
-TODO: finish this section. Use the paper \cite{Niazi2010} as a reference.
-Use the extra assignment as a reference too.
+TODO: finish this section. Use the extra assignment as a reference too.
 
+%%%%%%%%%% TASK %%%%%%%%%%
 % If you did not attend the Lego workshops, this section may be dedicated to a
 % discussion of challenges in SPI projects. Find at least four relevant
 % references that mention and analyze challenges and compile an overview of
@@ -574,6 +574,13 @@ Use the extra assignment as a reference too.
 
 % Identify the SPI techniques that might help to overcome these challenges.
 % Critically discuss the solution approaches from the papers.
+
+% Use the following.
+% https://canvas.gu.se/courses/68674/files/folder/Week4?preview=7880663.
+% https://canvas.gu.se/courses/68674/files/folder/Week4?preview=7880662
+% https://canvas.gu.se/courses/68674/files/folder/Week4?preview=7880661.
+% https://canvas.gu.se/courses/68674/files/folder/Week4?preview=7880660
+%%%%%%%%%% TASK %%%%%%%%%%
 
 \section{Redesign of the Software Process}
 \label{sec:redesign}
@@ -610,22 +617,27 @@ sprint.
 \section{Bonus Task: Scrum of Scrums}
 \label{sec:bonus_task}
 
-This task needs to be solved to get a 5 (pass with distinction).
-Note that to get a 5, all other tasks need to be at a level that fulfill the criteria for a 4.
-The bonus task cannot be used to pass the exam if you would fail it based on the other tasks.
-It cannot be used to improve a 3 (pass) either.
+% In the workshops, you observed many issues that related to inter-team
+% coordination. One way to address those issues is to have more frequent Scrum
+% of Scrum meetings. Another way to solve them is to have coordination
+% artifacts that create a common understanding between different teams.
 
-In the workshops, you observed many issues that related to inter-team coordination. One way to address those issues is to have more frequent Scrum of Scrum meetings. Another way to solve them is to have coordination artifacts that create a common understanding between different teams. Find at least three different peer-reviewed sources in the literature that discuss inter-team coordination and/or Scrum of Scrum meetings. Explain at least two challenges that have been reported connected to Scrum of Scrum meetings. Explain and justify whether you would recommend big companies to rely on frequent Scrum of Scrum meetings or whether you think other mechanisms are better for inter-team coordination. 
-
-If you decide to submit the bonus task, you get 1/2 page for it. The new page limit will be 6.5 pages.
+%%%%%%%%%% TASK %%%%%%%%%%
+% Find at least three different peer-reviewed sources in the literature that
+% discuss inter-team coordination and/or Scrum of Scrum meetings. Explain at
+% least two challenges that have been reported connected to Scrum of Scrum
+% meetings. Explain and justify whether you would recommend big companies to
+% rely on frequent Scrum of Scrum meetings or whether you think other
+% mechanisms are better for inter-team coordination. 
+%%%%%%%%%% TASK %%%%%%%%%%
 
 \section{Summary and Lessons Learned}
 \label{sec:summary}
-In the summary section, you should briefly summarize what your report is about and present your main findings/consequences.
+% In the summary section, you should briefly summarize what your report is
+% about and present your main findings/consequences.
 
-This section must be worked on individually.
-
-% This is used to generate the references section. See mybibfile.bib for the bib sources.
+% This is used to generate the references section. See mybibfile.bib for the
+% bib sources.
 \bibliographystyle{IEEEtran}
 \bibliography{mybibfile}
 \end{document}
